- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
P2: Important
 - 
    4.5.3, 4.6.3, 4.7.1, 5.3.2, 5.9.0
 
- 
        d14cf6d3d980e9289d95b197ca46a55e9e263b22, 9fe91e611145b8d4413130f9898e41b31de7403e c261b7ac7ed33d8e7e82aeb4b93daee323f3e5b9 (qt/tqtc-qtbase/5.15)
 
I've tested this on Windows, Mac and Linux with 4.5.2 and on Windows with 4.6.0.
To reproduce:
1. Create a mapped network drive to some folder on another machine.
2. Start up the "standardDialogs" qt example application.
3. Turn off the "use native dialogs" option and bring up the dialog to find a file. This should come up quickly.
4. Shut the dialog but keep the sample application running and then disconnect the other machine so that the mapped drive is unreachable. Don't just disconnect from the network on the machine running the test app though...disconnect the other computer.
5. Now bring back up the file dialog. Now it should take around a minute to come up. 
- duplicates
 - 
                    
QTBUG-59712 [REG 5.4.2->5.7.1]: When a folder contains a shortcut to a broken network share it can hang briefly when navigating to that folder in the dialog
-         
 - Closed
 
 -         
 
- is duplicated by
 - 
                    
QTBUG-41373 QFileDialog extermely slow and non-reactive with large number of files
-         
 - Closed
 
 -         
 
- relates to
 - 
                    
QTBUG-57832 FileDialog often takes 10s of seconds to load
-         
 - Closed
 
 -         
 - 
                    
QTBUG-45298 Windows: QFileSystemModel blocks application
-         
 - Reported
 
 -         
 - 
                    
QTBUG-107118 FileDialog using selectFolder freezes when there are unavailable network volumes
-         
 - Closed
 
 -         
 - 
                    
QTBUG-33039 get{Open|Save}FileName hangs for about 10 seconds in a loaded folder
-         
 - Closed
 
 -         
 - 
                    
QTBUG-49440 Windows: (widgets-based) QFileDialog::getOpenFileNames problem with NAS
-         
 - Closed
 
 -         
 
| For Gerrit Dashboard: QTBUG-6039 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 197663,2 | WIP: QFileSystemModel: Add volume node | dev | qt/qtbase | Status: NEW | -2 | 0 |